--- a/blackjack/public/index.html
+++ b/blackjack/public/index.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200;300&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Prompt:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
     <!--
